force-app/main/default/objects/Daily_Inspection_Report__c/Daily_Inspection_Report__c.object-meta.xml
<CustomObject>
    <label>Inspection</label>
    <nameField>
        <displayFormat>DIR-{yyyy}{mm}{dd}{000000}</displayFormat>
        <label>巡店员日报编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>