force-app/main/default/objects/Daily_Inspection_Report__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>平均分</description>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>