force-app/main/default/objects/Daily_Inspection_Report__c/fields/Average_Score_Count__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Score Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>