force-app/main/default/objects/Daily_Inspection_Report__c/fields/Average_Score_Max__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Max__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Score Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>