force-app/main/default/objects/Daily_Inspection_Report__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>品牌</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hisense</fullName>
                <label>Hisense (Hisense team)</label>
            </value>
            <value>
                <fullName>Noblex</fullName>
            </value>
            <value>
                <fullName>Philco</fullName>
            </value>
            <value>
                <fullName>Atma</fullName>
            </value>
            <value>
                <fullName>Hisense(Merchandiser)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>