force-app/main/default/objects/Daily_Inspection_Report__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>门店渠道名称</description>
    <formula>Store__r.Channel_item__r.Name</formula>
    <label>Channel</label>
    <type>Text</type>
</CustomField>