force-app/main/default/objects/Daily_Inspection_Report__c/fields/Customer_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attribute__c</fullName>
    <label>Customer Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>客户属性1</fullName>
            </value>
            <value>
                <fullName>客户属性2</fullName>
            </value>
            <value>
                <fullName>客户属性13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>