force-app/main/default/objects/Daily_Inspection_Report__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>客户名称</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>