force-app/main/default/objects/Daily_Inspection_Report__c/fields/Distance_Formula__c.field-meta.xml
<CustomField>
    <fullName>Distance_Formula__c</fullName>
    <formula>IF( Distance__c &lt; 1, TEXT(ROUND(Distance__c * 1000 ,0)) &amp; &apos;m&apos;, TEXT(ROUND(Distance__c, 2)) &amp; &apos;km&apos;)</formula>
    <label>Distance</label>
    <type>Text</type>
</CustomField>