force-app/main/default/objects/Daily_Inspection_Report__c/fields/Gridding__c.field-meta.xml
<CustomField>
    <fullName>Gridding__c</fullName>
    <description>网格</description>
    <formula>Store__r.Grid__r.Name</formula>
    <label>Gridding</label>
    <type>Text</type>
</CustomField>