force-app/main/default/objects/Daily_Inspection_Report__c/fields/Inspect_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Type__c</fullName>
    <description>巡店类型，分为现场巡店和远程巡店两种</description>
    <inlineHelpText>Types of store inspection, categorized into locale inspection and remote inspection</inlineHelpText>
    <label>Inspect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote Inspection</fullName>
            </value>
            <value>
                <fullName>Locale Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>