force-app/main/default/objects/Daily_Inspection_Report__c/fields/Inspection_Shop_Plan__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Shop_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>巡店计划</label>
    <referenceTo>Inspection_Shop_Plan__c</referenceTo>
    <relationshipName>Daily_Inspection_Report</relationshipName>
    <type>Lookup</type>
</CustomField>