force-app/main/default/objects/Daily_Inspection_Report__c/fields/Is_The_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>判断巡店日报是否为该门店下最新创建的日报（已提交状态）</description>
    <label>Is The Latest</label>
    <type>Checkbox</type>
</CustomField>