force-app/main/default/objects/Daily_Inspection_Report__c/fields/Mileage_Of_Today__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Of_Today__c</fullName>
    <description>巡店里程（需用户手动填写）</description>
    <inlineHelpText>mileage (to be filled in by the user)</inlineHelpText>
    <label>当日里程</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>