force-app/main/default/objects/Daily_Inspection_Report__c/fields/NeedCheckIn__c.field-meta.xml
<CustomField>
    <fullName>NeedCheckIn__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Need Check In</label>
    <type>Checkbox</type>
</CustomField>