force-app/main/default/objects/Daily_Inspection_Report__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>注释（创建巡店报告时用户填写）</description>
    <inlineHelpText>Note (to be filled in by the user when creating the inspection report)</inlineHelpText>
    <label>Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>