force-app/main/default/objects/Daily_Inspection_Report__c/fields/Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Owner_text__c</fullName>
    <label>Owner_text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>