force-app/main/default/objects/Daily_Inspection_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>巡店日期</description>
    <label>报告日期</label>
    <type>Date</type>
</CustomField>