force-app/main/default/objects/Daily_Inspection_Report__c/fields/Report_Detail__c.field-meta.xml
<CustomField>
    <fullName>Report_Detail__c</fullName>
    <label>报告内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>