force-app/main/default/objects/Daily_Inspection_Report__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <formula>CASE( Status__c , 
&apos;New&apos;, &apos;Draft&apos;, 
&apos;Submitted&apos;, &apos;Submitted&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Status</label>
    <type>Text</type>
</CustomField>