force-app/main/default/objects/Daily_Inspection_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Check_Item_Type</valueSetName>
    </valueSet>
</CustomField>