force-app/main/default/objects/Daily_Inspection_Report__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>销售区域</description>
    <formula>TEXT(Store__r.Sales_Region__c)</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>