force-app/main/default/objects/Daily_Inspection_Report__c/fields/ScoreLine__c.field-meta.xml
<CustomField>
    <fullName>ScoreLine__c</fullName>
    <label>ScoreLine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>