force-app/main/default/objects/Daily_Inspection_Report__c/fields/Share_Shop__c.field-meta.xml
<CustomField>
    <fullName>Share_Shop__c</fullName>
    <formula>Store__r.Shop_Code_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Share Shop</label>
    <type>Text</type>
</CustomField>