force-app/main/default/objects/Daily_Inspection_Report__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>报告状态编码</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>