force-app/main/default/objects/Daily_Inspection_Report__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>门店ID（关联门店表）</description>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>DailyInspectionReports</relationshipName>
    <type>Lookup</type>
</CustomField>