force-app/main/default/objects/Daily_Inspection_Report__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>总结（用户在巡店报告最后填写的总结）</description>
    <inlineHelpText>Summary (filled out by the user at the end of the store inspection report)</inlineHelpText>
    <label>Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>