force-app/main/default/objects/Daily_Inspection_Report__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <description>工单号</description>
    <label>Ticket Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>