force-app/main/default/objects/Daily_Inspection_Report__c/fields/Total_Score_Max__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_Max__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Score Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>