force-app/main/default/objects/Daily_Inspection_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Report_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>