force-app/main/default/objects/Daily_Inspection_Report__c/listViews/Argentina.listView-meta.xml
<ListView>
    <fullName>Argentina</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Store__c</columns>
    <columns>Channel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Distance_Formula__c</columns>
    <columns>Check_In_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Recorded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Argentina</value>
    </filters>
    <label>Argentina</label>
    <sharedTo>
        <role>Argentina_GM</role>
        <role>Argentina_SM</role>
        <role>Argentina_Store_Manager</role>
    </sharedTo>
</ListView>