force-app/main/default/objects/Daily_Inspection_Report__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Store__c</columns>
    <columns>Owner_text__c</columns>
    <columns>Status__c</columns>
    <columns>Inspection_Shop_Plan__c</columns>
    <columns>Owner_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Canada</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <label>Canada</label>
    <sharedTo>
        <roleAndSubordinates>Canada_GM</roleAndSubordinates>
    </sharedTo>
</ListView>