force-app/main/default/objects/Daily_Inspection_Report__c/listViews/Chile.listView-meta.xml
<ListView>
    <fullName>Chile</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Owner_text__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store__c</columns>
    <columns>Status__c</columns>
    <columns>Average_Score__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Chile</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <label>Chile</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Chile_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>