force-app/main/default/objects/Daily_Inspection_Report__c/listViews/Copy_of_Chile.listView-meta.xml
<ListView>
    <fullName>Copy_of_Chile</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Owner_text__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store__c</columns>
    <columns>Status__c</columns>
    <columns>Average_Score__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Columbia</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Colombia</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Colombia_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>