force-app/main/default/objects/Daily_Inspection_Report__c/listViews/Japan.listView-meta.xml
<ListView>
    <fullName>Japan</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Report_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Owner_text__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Average_Score__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Average_Score_Max__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Total_Score_Max__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Japan</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>New</value>
    </filters>
    <label>Japan</label>
    <sharedTo>
        <roleAndSubordinatesInternal>JP_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>