force-app/main/default/objects/Daily_Inspection_Report__c/listViews/South_Africa.listView-meta.xml
<ListView>
    <fullName>South_Africa</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Owner_text__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Average_Score__c</columns>
    <columns>Average_Score_Max__c</columns>
    <columns>Store__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Total_Score_Max__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense South Africa</value>
    </filters>
    <filters>
        <field>Owner_Profile__c</field>
        <operation>contains</operation>
        <value>South Africa</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>South Africa</label>
    <sharedTo>
        <roleAndSubordinatesInternal>South_Africa_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>