force-app/main/default/objects/Daily_Inspection_Report__c/listViews/USA.listView-meta.xml
<ListView>
    <fullName>USA</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Store__c</columns>
    <columns>Owner_text__c</columns>
    <columns>Status__c</columns>
    <columns>Inspection_Shop_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense USA</value>
    </filters>
    <label>USA</label>
    <sharedTo>
        <roleAndSubordinatesInternal>USA_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>